# java-profiler

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .sdkmanrc  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DogFood.h  DogFood.hpp  DogFood.sample.cc  DogFood.unit_test.cc  Makefile  README.md  _config.yml  analyze_gradle_log.py  build.gradle  build.gradle.kts  common.gradle  common.gradle.kts  comprehensive_gradle_parser.py  comprehensive_parser.py  create_md_summary.py  generate_gradle_summaries.py  gradle.properties.template  gradle_log_parser_final.py  index.md  jmh-comment.html  jmh-result.html  license  parse_final_gradle_log.py  parse_gradle_build.py  parse_gradle_build_analyst.py  parse_gradle_build_log.py  parse_gradle_final.py  parse_gradle_final_analyst.py  parse_gradle_final_v2.py  parse_gradle_log.py  parse_gradle_log_agent.py  (+14 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  OCTO_STS_POLICY_REQUEST.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependabot.yml.disabled  release.yml  upstream-tracker-state.txt
.gitlab/: Dockerfile.datadog-ci  benchmarks.yml  common.yml  config.env  macrobenchmarks.yml
.vdiff/: annotations.yaml
_data/: integration.json
benchmark/: Dockerfile  benchmarks.sh  run.sh
benchmarks/: index.md
build-logic/: QUICKSTART.md  README.md  settings.gradle
buildSrc/: README_DEBUG_SYMBOLS_PLUGIN.md  README_GTEST_PLUGIN.md
build_support/: make_for_maven.sh
ddprof-lib/: .clang-format  build.gradle  build.gradle.kts  settings.gradle  test.sh
ddprof-lib/src/test/: AddUnitTests.cmake  CMakeLists.txt  Sanitizers.cmake  prepare_gtest.sh  run_tests.sh
ddprof-lib/src/test/cpp/: branch_hints_ut.cpp  codeCache_ut.cpp  context_sanity_ut.cpp  context_uaf_ut.cpp  ddprof_ut.cpp  demangle_ut.cpp  dictionary_concurrent_ut.cpp  dictionary_ut.cpp  dwarf_ut.cpp  elfparser_ut.cpp  faultInjection_ut.cpp  flightRecorder_result_ut.cpp  forced_unwind_ut.cpp  frame_ut.cpp  fuzz_buffers.cpp  fuzz_call_trace_storage.cpp  fuzz_config_parser.cpp  fuzz_dictionary.cpp  fuzz_dwarf.cpp  fuzz_linear_allocator.cpp  fuzz_reservoir_sampler.cpp  fuzz_rust_demangler.cpp  fuzz_stack_walker.cpp  fuzz_stack_walker_extreme.cpp  fuzz_thread_filter.cpp  hotspotSupport_ut.cpp  hotspotSupport_vtable_lookup_ut.cpp  hotspot_crash_protection_ut.cpp  jvmSupport_ut.cpp  libraries_ut.cpp  lineNumberTableCopy_ut.cpp  linear_allocator_ut.cpp  livenessTracker_ut.cpp  methodInfo_hash_ut.cpp  methodMapId_ut.cpp  nativeBlock_ut.cpp  nativeMem_ut.cpp  nativeSocketInterposer_ut.cpp  nativeSocketSampler_ut.cpp  nativeThreadNames_ut.cpp  (+49 more)
ddprof-lib/src/test/fuzz/: README.md  fuzz_arguments.cpp  fuzz_buffer.cpp  fuzz_callTraceStorage.cpp  fuzz_dwarf.cpp  fuzz_elf.cpp  fuzz_stringDictionary.cpp  fuzz_threadLocal.cpp
ddprof-lib/src/test/fuzz/corpus/arguments/: cstack_dwarf  start_wall_file
ddprof-lib/src/test/fuzz/corpus/buffer/: varint_max
ddprof-lib/src/test/fuzz/corpus/dwarf/: minimal_eh_frame_hdr
ddprof-lib/src/test/fuzz/corpus/elf/: bug1_section_header_oob_2  bug3_buildid_note_overflow
ddprof-lib/src/test/fuzz/corpus/fuzz_arguments/: start_alloc  start_cpu
ddprof-lib/src/test/fuzz/corpus/fuzz_buffer/: put8_sequence  utf8_string
ddprof-lib/src/test/fuzz/corpus/fuzz_callTraceStorage/: seed0  seed_expansion
ddprof-lib/src/test/fuzz/corpus/fuzz_elf/: bug1_section_header_oob_1  bug2_symtab_size_oob
ddprof-lib/src/test/fuzz/corpus/fuzz_stringDictionary/: basic_rotation
ddprof-lib/src/test/fuzz/corpus/fuzz_threadLocal/: double_special_values  intptr_roundtrip  tracked_lifecycle  tracked_nullptr_recreate  tracked_overwrite_padding
ddprof-lib/src/test/fuzz/corpus/threadLocal/: double_truncated_payload
ddprof-lib/src/test/make/: Makefile
ddprof-lib/src/test/resources/: readme.txt
ddprof-lib/src/test/resources/native-libs/reladyn-lib/: reladyn.c
ddprof-lib/src/test/resources/native-libs/small-lib/: small_lib.cpp
ddprof-lib/src/test/resources/native-libs/unloadable-io-lib/: Makefile  unloadable_io.c
ddprof-lib/src/test/resources/native-libs/unresolved-functions/: Makefile  main.c  readme.txt
ddprof-lib/src/test/resources/small-lib/: Makefile
ddprof-lib/src/test/resources/unresolved-functions/: Makefile  linker.ld
ddprof-reproducer-jfr-thread-race/: ALLOCATION-PATTERN.md  DEPLOY.md  QUICKSTART.md  README.md  USAGE.md  build.gradle
ddprof-statsd/: build.gradle  readme.md
ddprof-stresstest/: README.md  build.gradle  build.gradle.kts
ddprof-test-native/: build.gradle.kts
(+1074 files in other folders)
